# xxx

./: .gitignore  Makefile  README.md  index.html  pyproject.toml
docs/: architecture.md
examples/: dev_agent.html  dev_agent_remote.html  diary_music_image.html  partner_voice_site.html  psytrance_prompt_editor.html
picture_diary/src/: index.html
picture_diary/v2/: index.html
projects/simple_html/: index.html
scripts/: serve_web.py
src/app/: main.py
src/lib/: __init__.py  eyesfree.py  prompt_builder.py  session.py  speech.py  stt.py
tests/lib/: test_eyesfree.py  test_prompt_builder.py  test_speech.py  test_stt.py
workbench/: index.html
