[project]
name = "xxx"
version = "0.1.0"
description = "CLI + examples scaffold per repository guidelines"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name"}]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
